mise a jour back2

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ GOOGLE_CLIENT_SECRET=ton_google_client_secret
 FACEBOOK_APP_ID=ton_facebook_app_id
 FACEBOOK_APP_SECRET=ton_facebook_app_secret
 SESSION_SECRET=ton_secret_pour_les_sessions
+JWT_SECRET=yourSecretKey
+EMAIL_USER=channoufiaziz8@gmail.com
+EMAIL_PASS=mumnwdktqrtrxmgf
+
