--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
