upload image work backend

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ SESSION_SECRET=ton_secret_pour_les_sessions
 JWT_SECRET=yourSecretKey
 EMAIL_USER=channoufiaziz8@gmail.com
 EMAIL_PASS=mumnwdktqrtrxmgf
+CLOUDINARY_CLOUD_NAME=djc7yq80i
+CLOUDINARY_API_KEY=888862441633427
+CLOUDINARY_API_SECRET=rPnQp-Y_ZLv6ZUeczJ-pcCCkipM
