--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_NAME=wrapped
 DB_USER=sscodebug
-DB_PASSWORD=youssef05++
+DB_PASSWORD=youssef05+
 DB_HOST="127.0.0.1"
 
 GOOGLE_CLIENT_ID=ton_google_client_id
