--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_NAME=wrapped
-DB_USER=sscodebug
-DB_PASSWORD=youssef05+
-DB_HOST="127.0.0.1"
+DB_USER=root
+DB_PASSWORD=407000
+DB_HOST="localhost"
 
 GOOGLE_CLIENT_ID=ton_google_client_id
 GOOGLE_CLIENT_SECRET=ton_google_client_secret
